    * Fix some possible unchecked memory references after malloc
    * Prevent free( NULL ) in SQLGetDiagRecW
    * Add missing A->W conversion in SQLGetStmtOption
    * Allow iconv to convert strings into the driver with differing A and W lengthts (UTF)
    * SQLDataSourcesW takes buffer_lenghts as characters not bytes
    * Fix memory leak in SQLGetDiagRec

8th-October-2013
2.3.2

    * The logging of WStrings was using the incorrect length in some cases
    * Pass SQLDescribeCol call to driver when in state 2 (not a cursor spec).
    * Pass SQLMoreResults call to driver when in state 2 (not a cursor spec).
      Both the last two changes are not as per the original book state table
      but allign with the current MS driver manager
    * The -e option to isql got lost somewhere. Back in now
    * Update install-sh
    * SQLCancel assumed that the DM was being built with thread support
    * Try and speed up SQLTransact and SQLEndTran operation
    * Add missing \ in Postgres7.1 Makefile
    * Correct some potential buffer overflows
    * Handle SQL_NEED_DATA from a SQLMoreResults 
    * Get the local charset via nl_langinfo(CODESET) when asking the DM to do ASCII-UNICODE conversions
    * Handle (and remove) leading spaces from ini entries
    * Fixed unicode conversion problems in SQLGetDiagField(W)
    * missing terminating null in iusql
    * add to the list of errno states that does not cause a create of the ini file
    * SQLSetConnactAttr() -> SQLSetConnectAttrW() was passing incorrect string length
    * Fix double free in SQLGetDiagFieldW
    * Fix Unicode/Ansi conversion problem in SQLGetDiagFieldW.c
    * Add support for Driver64 in SQLDriverConnectW
    * Add missing unicode setting when returning a connection to the pool
    * Tidy up leaking iconv handles if connect_part_one fails
    * Fix (and avoid) some out of memory problems
    * Wrap lt_dlinit and dlerror in the lib mutex